# tg-monitor-repost-good-news

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: spec-reviewer.md
config/: README.md  config.example.yaml  sources.example.yaml  topics.example.yaml
config/examples/: career.example.txt  culture_commercial.example.txt  entrepreneurship.example.txt  facet_a.example.txt  facet_b.example.txt  startup_invest.example.txt
deploy/: tg-monitor.service
docs/: facet-examples.md  sources-candidates.md  spec.md
scripts/: login.py  score.py  watch.py
src/tg_monitor/: __init__.py  chunking.py  config_loader.py  config_store.py  deduplicator.py  embedder.py  errors.py  logging_setup.py  matcher.py  models.py  reader.py  sources_registry.py  state.py  telegram_env.py
tests/: conftest.py  telethon_fakes.py  test_chunking.py  test_config_loader.py  test_config_store.py  test_deduplicator.py  test_embedder.py  test_logging_setup.py  test_matcher.py  test_models.py  test_reader.py  test_sources_registry.py  test_state.py
