[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-monitor"
version = "0.1.0"
description = "Универсальный монитор Telegram-каналов с тематическим отбором и форвардом"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "PTH", # use pathlib
    "RUF", # ruff-specific
]
ignore = [
    "RUF001", # ambiguous-unicode-character-string — код и логи на русском намеренно
    "RUF002", # то же для docstring
    "RUF003", # то же для комментариев
]

[tool.ruff.lint.isort]
known-first-party = ["tg_monitor"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
