[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-monitor"
version = "0.1.0"
description = "Универсальный монитор Telegram-каналов с тематическим отбором и форвардом"
requires-python = ">=3.12"
# Единственный источник списка зависимостей: requirements.txt содержит
# только "-e .", ничего не дублирует.
#
# torch — CPU-only, §10 docs/spec.md / CLAUDE.md ("torch только CPU"). Индекс
# PyPI отдаёт под Linux сборку с бандлом CUDA (гигабайты впустую), поэтому
# torch ставится ДО "pip install -e ." отдельной командой с CPU-индексом:
#     pip install --index-url https://download.pytorch.org/whl/cpu "torch>=2.2"
#     pip install -e .
# Второй шаг видит версию torch уже удовлетворённой и не переустанавливает
# его с обычного PyPI.
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.7",
    "tzdata>=2024.1",
    "telethon>=1.36",
    "python-dotenv>=1.0",
    "ruamel.yaml>=0.18",
    "qrcode>=7.4",
    "torch>=2.2",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# "slow" — интеграционный тест с реальной моделью (сеть, скачивание весов при
# первом запуске). По умолчанию не запускается: `pytest -m slow`, чтобы
# включить явно.
addopts = "-m 'not slow'"
markers = [
    "slow: интеграционный тест с реальной эмбеддинг-моделью, не для обычного pytest-гейта",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "PTH", # use pathlib
    "RUF", # ruff-specific
]
ignore = [
    "RUF001", # ambiguous-unicode-character-string — код и логи на русском намеренно
    "RUF002", # то же для docstring
    "RUF003", # то же для комментариев
]

[tool.ruff.lint.isort]
known-first-party = ["tg_monitor"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qrcode.*"
ignore_missing_imports = true
